List fwrd iterator

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,16 @@
 #others
 a.*
 .DS_Store
+
+
+#cmake
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+CTestTestfile.cmake
+
+#build
+build/*
