some es from ch9, ch10 and ch11

--- a/second_pass/ch11/CMakeLists.txt
+++ b/second_pass/ch11/CMakeLists.txt
@@ -16,6 +16,10 @@ endif()
 enable_language(CXX)
 set(CMAKE_CXX_STANDARD 14)
 
+IF(CMAKE_BUILD_TYPE MATCHES Debug)
+      message("Debug build.")
+ENDIF()
+
 # The version number
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
@@ -23,20 +27,11 @@ set (Tutorial_VERSION_MINOR 0)
 include_directories($ENV{CPPUTEST_HOME}/include)
 link_directories($ENV{CPPUTEST_HOME}/lib)
 
-#file(GLOB SOURCES "*.cpp")
-#treeTest
-set (treeTest treeTest.cpp)
-add_executable(treeTest test.cpp ${treeTest})
-target_link_libraries(treeTest CppUTest)
-
-
-
 #es1
 set (sources1 es1.cpp)
 set (testSources1 test1.cpp)
 add_executable(utest1 test.cpp ${testSources1} ${sources1})
 target_link_libraries(utest1 CppUTest)
-
 
 #es3
 set (sources3 es3.cpp)
@@ -44,5 +39,22 @@ set (testSources3 test3.cpp)
 add_executable(utest3 test.cpp ${testSources3} ${sources3})
 target_link_libraries(utest3 CppUTest)
 
+#es4
+set (sources4 es4.cpp)
+set (testSources4 test4.cpp)
+add_executable(utest4 test.cpp ${testSources4} ${sources4})
+target_link_libraries(utest4 CppUTest)
+
+#es7
+set (sources7 es7.cpp)
+set (testSources7 test7.cpp)
+add_executable(utest7 test.cpp ${testSources7} ${sources7})
+target_link_libraries(utest7 CppUTest)
+
+#es8
+set (sources8 es8.cpp)
+set (testSources8 test8.cpp)
+add_executable(utest8 test.cpp ${testSources8} ${sources8})
+target_link_libraries(utest8 CppUTest)
 
 
