--- a/second_pass/ch12/CMakeLists.txt
+++ b/second_pass/ch12/CMakeLists.txt
@@ -16,6 +16,10 @@ endif()
 enable_language(CXX)
 set(CMAKE_CXX_STANDARD 14)
 
+IF(CMAKE_BUILD_TYPE MATCHES Debug)
+      message("Debug build.")
+ENDIF()
+
 # The version number
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
@@ -23,26 +27,21 @@ set (Tutorial_VERSION_MINOR 0)
 include_directories($ENV{CPPUTEST_HOME}/include)
 link_directories($ENV{CPPUTEST_HOME}/lib)
 
-#file(GLOB SOURCES "*.cpp")
-#treeTest
-set (treeTest treeTest.cpp)
-add_executable(treeTest test.cpp ${treeTest})
-target_link_libraries(treeTest CppUTest)
-
-
-
 #es1
 set (sources1 es1.cpp)
 set (testSources1 test1.cpp)
 add_executable(utest1 test.cpp ${testSources1} ${sources1})
 target_link_libraries(utest1 CppUTest)
 
+#es2
+set (sources2 es2.cpp)
+set (testSources2 test2.cpp)
+add_executable(utest2 test.cpp ${testSources2} ${sources2})
+target_link_libraries(utest2 CppUTest)
 
 #es3
 set (sources3 es3.cpp)
 set (testSources3 test3.cpp)
 add_executable(utest3 test.cpp ${testSources3} ${sources3})
 target_link_libraries(utest3 CppUTest)
-
-
 
