--- a/second_pass/ch13/CMakeLists.txt
+++ b/second_pass/ch13/CMakeLists.txt
@@ -16,10 +16,6 @@ endif()
 enable_language(CXX)
 set(CMAKE_CXX_STANDARD 14)
 
-IF(CMAKE_BUILD_TYPE MATCHES Debug)
-      message("Debug build.")
-ENDIF()
-
 # The version number
 set (Tutorial_VERSION_MAJOR 1)
 set (Tutorial_VERSION_MINOR 0)
@@ -27,11 +23,13 @@ set (Tutorial_VERSION_MINOR 0)
 include_directories($ENV{CPPUTEST_HOME}/include)
 link_directories($ENV{CPPUTEST_HOME}/lib)
 
+#file(GLOB SOURCES "*.cpp")
 #es1
 set (sources1 es1.cpp)
 set (testSources1 test1.cpp)
 add_executable(utest1 test.cpp ${testSources1} ${sources1})
 target_link_libraries(utest1 CppUTest)
+
 
 #es2
 set (sources2 es2.cpp)
@@ -45,9 +43,3 @@ set (testSources3 test3.cpp)
 add_executable(utest3 test.cpp ${testSources3} ${sources3})
 target_link_libraries(utest3 CppUTest)
 
-
-#es4
-set (sources4 es4.cpp)
-set (testSources4 test4.cpp)
-add_executable(utest4 test.cpp ${testSources4} ${sources4})
-target_link_libraries(utest4 CppUTest)
